--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
         "deploy": "node ./gh-pages.js",
         "dev": "rollup -c -w",
         "start": "sirv public --no-clear",
-        "check": "svelte-check --tsconfig ./tsconfig.json",
-        "build&deploy": "yarn build && yarn deploy"
+        "check": "svelte-check --tsconfig ./tsconfig.json"
     },
     "devDependencies": {
         "@rollup/plugin-commonjs": "^17.0.0",
